[tool.poetry]
name = "ao3-disco-ai"
version = "0.1.0"
description = ""
authors = ["Kevin Alex Zhang <me@kevz.dev>"]
readme = "README.md"
packages = [{include = "ao3_disco_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pydantic = "^2.0.1"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
lightning = "^2.0.6"
tensorboardx = "^2.6.2"

[tool.poetry.scripts]
ao3-disco-ai = "ao3_disco_ai.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
